Add some credits for the photo owner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           <span class="text"> ODIN </span>
         </div>
       </div>
+      <div class="credits">
+        Photo by
+        <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+        <a href="unsplash.com/@haliewestphoto">Unplash</a>
+      </div>
     </div>
     <div class="form-side">
       <div class="header">
